Fixed Problem in popover which covers the trigger button.

--- a/src/styles/components/_drop-down-icon.scss
+++ b/src/styles/components/_drop-down-icon.scss
@@ -1,14 +1,17 @@
+@import "../variables/spacing";
+@import "../mixins/transitions";
 $icon-width: 48px;
 
 .chamel-drop-down-icon {
   display: inline-block;
-  width: $icon-width !important;
+  width: $icon-width;
   position: relative;
   height: $desktop-toolbar-height;
   font-size: $desktop-drop-down-menu-font-size;
   cursor: pointer;
 
   &.chamel-open {
+    width: auto !important;
     .chamel-icon-highlight {
       background-color: rgba(0, 0, 0, .1);
     }
